--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,6 +25,7 @@ jobs:
        cache: 'pip'
     - run: pip install m2r
     - run: python3 md2rst.py --overwrite
+    - run: git add .
     
     - name: Check if there are any changes
       id: verify_diff
@@ -36,7 +37,7 @@ jobs:
       run: |
         git config user.name "kunderu-eurecom"
         git config user.email "kunderu@eurecom.fr" 
-        git add .
+#        git add .
         git commit -m "converting markdown to rst"
     - name: Push
       if: steps.verify_diff.outputs.changed == 'true'
