--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@main
     - uses: actions/setup-python@v5
       with:
+       repository: kunderu-eurecom/blueprint/
        cache: 'pip'
     - run: pip install m2r
     - run: python3 md2rst.py --overwrite
