--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -11,36 +11,25 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "convertmd2rst"
+  # This workflow contains a single job called "greet"
   convertmd2rst:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    #if: contains(github.event.head_commit.message, 'include-rst')
+    if: contains(github.event.head_commit.message, 'include-rst')
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@main
     - uses: actions/setup-python@v5
+    
       with:
-       repository: kunderu-eurecom/blueprint/
-       cache: 'pip'
+        cache: 'pip'
+
+    - run: git config user.name "kunderu-eurecom"
+    - run: git config user.email "kunderu@eurecom.fr" 
     - run: pip install m2r
     - run: python3 md2rst.py --overwrite
-    
-    - name: Check if there are any changes
-      id: verify_diff
-      run: |
-        git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
-
-    - name: Commit
-      if: steps.verify_diff.outputs.changed == 'true'
-      run: |
-        git config user.name "kunderu-eurecom"
-        git config user.email "kunderu@eurecom.fr" 
-        git add .
-        git commit -m "converting markdown to rst"
-    - name: Push
-      if: steps.verify_diff.outputs.changed == 'true'
-      run:
-        git push
+    - run: git add .
+    - run: git commit -m "converting markdown to rst"
+    - run: git push
     
