--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,21 +15,32 @@ jobs:
   convertmd2rst:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'include-rst')
+    #if: contains(github.event.head_commit.message, 'include-rst')
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@main
     - uses: actions/setup-python@v5
-    
       with:
-        cache: 'pip'
-
-    - run: git config user.name "kunderu-eurecom"
-    - run: git config user.email "kunderu@eurecom.fr" 
+       repository: kunderu-eurecom/blueprint/
+       cache: 'pip'
     - run: pip install m2r
     - run: python3 md2rst.py --overwrite
-    - run: git add .
-    - run: git commit -m "converting markdown to rst"
-    - run: git push
+    
+    - name: Check if there are any changes
+      id: verify_diff
+      run: |
+        git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+
+    - name: Commit
+      if: steps.verify_diff.outputs.changed == 'true'
+      run: |
+        git config user.name "kunderu-eurecom"
+        git config user.email "kunderu@eurecom.fr" 
+        git add .
+        git commit -m "converting markdown to rst"
+    - name: Push
+      if: steps.verify_diff.outputs.changed == 'true'
+      run:
+        git push
     
