--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,4 +43,14 @@ jobs:
       if: steps.verify_diff.outputs.changed == 'true'
       run:
         git push
+    - name: PushRST
+      if: steps.verify_diff.outputs.changed == 'true'
+      run: |
+        git config user.name "skunderu"
+        git config user.email "surya-kumar.kunderu@lip6.fr"
+        git clone -b blueprint-sk https://gitlab.ilabt.imec.be/slices/slices-documentation
+        git add .
+        git commit -m "pushing latest changes of blueprint documentation"
+        git push
+        
     
