--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -46,11 +46,14 @@ jobs:
     - name: PushRST
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
+        cd ..
         git config user.name "skunderu"
         git config user.email "surya-kumar.kunderu@lip6.fr"
         git clone -b blueprint-sk https://gitlab.ilabt.imec.be/slices/slices-documentation
-        git add *.rst
-        git add git add images/\*
+        cp blueprint/*.rst slices-documentation/blueprint
+        cp -r blueprint/images/ slices-documentation/blueprint/
+        cd slices-documentation
+        git add .
         git commit -m "pushing latest changes of blueprint documentation"
         git push
         
