--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -49,5 +49,6 @@ jobs:
         cd ..
         git clone --verbose https://skunderu:YsjQKwDgRD7R4Gf5SZqG@gitlab.ilabt.imec.be/slices/slices-documentation
         cd slices-documentation
+        cp blueprint/*.rst slices-documentation/blueprint
         
     
