--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -55,5 +55,6 @@ jobs:
         git config user.email "kunderu@eurecom.fr"
         git add .
         git commit -m "pushing latest changes of blueprint documentation"
+        git push
         
     
