--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -51,8 +51,8 @@ jobs:
         cp blueprint/*.rst slices-documentation/blueprint
         cp -r blueprint/images/ slices-documentation/blueprint/
         cd slices-documentation
-        git config user.name "kunderu-eurecom"
-        git config user.email "kunderu@eurecom.fr"
+        git config user.name "skunderu"
+        git config user.email "surya-kumar.kunderu@lip6.fr"
         git add .
         git commit -m "pushing latest changes of blueprint documentation"
         git push
