--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -43,14 +43,11 @@ jobs:
       if: steps.verify_diff.outputs.changed == 'true'
       run:
         git push
-  pushrst2imec:
-  runs-on: ubuntu-latest
-    steps:
     - name: PushRST
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
         cd ..
-        git clone --verbose https://skunderu:YsjQKwDgRD7R4Gf5SZqG@gitlab.ilabt.imec.be/slices/slices-documentation
+        git clone -b blueprint-sk https://skunderu:YsjQKwDgRD7R4Gf5SZqG@gitlab.ilabt.imec.be/slices/slices-documentation
         cp blueprint/*.rst slices-documentation/blueprint
         cp -r blueprint/images/ slices-documentation/blueprint/
         cd slices-documentation
