--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,7 +25,7 @@ jobs:
        repository: kunderu-eurecom/blueprint/
        cache: 'pip'
     - run: pip install m2r
-    - run: python3 md2rst.py --overwrite
+    - run: python3 md2rst.py --overwrite --parse_relative_links
     
     - name: Check if there are any changes
       id: verify_diff
