--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Check if there are any changes
       id: verify_diff
       run: |
-        git diff --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+        git diff --cached --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
 
     - name: Commit
       if: steps.verify_diff.outputs.changed == 'true'
