--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,8 +15,8 @@ jobs:
   convertmd2rst:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    #if: contains(github.event.head_commit.message, 'include-rst')
-
+    environment: 
+      name: staging
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - uses: actions/checkout@main
@@ -46,12 +46,12 @@ jobs:
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
         cd ..
-        git clone -b blueprint-sk https://user:token@gitlab.ilabt.imec.be/slices/slices-documentation
+        git clone -b blueprint-sk https://${{ secrets.IMEC_USER }}:${{ secrets.SECRET_TOKEN }}@gitlab.ilabt.imec.be/slices/slices-documentation
         cp blueprint/*.rst slices-documentation/blueprint
         cp -r blueprint/images/ slices-documentation/blueprint/
         cd slices-documentation
-        git config user.name "skunderu"
-        git config user.email "surya-kumar.kunderu@lip6.fr"
+        git config user.name ${{ secrets.IMEC_USER }}
+        git config user.email ${{ secrets.IMEC_EMAIL }}
         git add .
         git commit -m "pushing latest changes of blueprint documentation"
         git push
