--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         git diff --cached --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
 
-    - name: Commit
+    - name: Commit2Self
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
         git config user.name ${{ secrets.MY_USER }}
@@ -42,7 +42,7 @@ jobs:
       if: steps.verify_diff.outputs.changed == 'true'
       run:
         git push
-    - name: PushRST
+    - name: AddRST2IMEC
       if: steps.verify_diff.outputs.changed == 'true'
       run: |
         cd ..
@@ -53,6 +53,14 @@ jobs:
         git config user.name ${{ secrets.IMEC_USER }}
         git config user.email ${{ secrets.IMEC_EMAIL }}
         git add .
+    - name: Check if there are any changes w.r.t IMEC repo
+      id: verify_imec_diff
+      # This is required in edge case where a previous push to IMEC fails for any reason
+      run: |
+        git diff --cached --quiet . || echo "changed=true" >> $GITHUB_OUTPUT
+    - name: PushRST2IMEC
+      if: steps.verify_imec_diff.outputs.changed == 'true'
+      run: |        
         git commit -m "pushing latest changes of blueprint documentation"
         git push
         
